--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body{
     <h1>LOGIN</h1>
     <form onsubmit="return validateform()" method="post" action="login.php">
     <label>ID: </label>
-    <input type="ID" id="ID" name="ID" />
+    <input type="text" id="id" name="id" />
 
     <label>Password: </label>
     <input type="text" id="password" name="password" />
@@ -29,4 +29,5 @@ body{
     <script src="login.js"></script>
     </body>
 </head>
+
 </html>
